documentation improved
