# swagger-config.yaml
@@ -70,7 +70,7 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 1
       responses:
         200:
           description: Successfully returned book
@@ -121,7 +121,7 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 3
       responses:
         200:
           description: Successfully deleted Book
@@ -195,7 +195,7 @@ paths:
             type: array
             items:
               type: string
-              example: [mystic, thriller]
+          example: ['Всемирная классика', 'Ужасы']
       responses:
         200:
           description: Successfully retrieved array of books
@@ -208,7 +208,7 @@ paths:
         400:
           description: Bad request!
   /authors:
-    description: Author resourse. Create, get information about authors from book store database
+    description: Author resource. Create, get information about authors from book store database
     get:
       tags:
         - authors
@@ -262,7 +262,7 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 1
       responses:
         200:
           description: Successfully returned Author
@@ -309,7 +309,7 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 3
       responses:
         200:
           description: Successfully deleted Author
@@ -319,53 +319,6 @@ paths:
           description: Forbidden! Only users with role 'ADMIN' can delete authors
         404:
           description: Author not found. Invalid ID supplied!
-#  /authors/findByFio:
-#    get:
-#      tags:
-#        - authors
-#      description: Get authors by firstname, lastname, patronymic
-#      parameters:
-#        - name: page
-#          required: false
-#          in: query
-#          description: The page which you want to get
-#          schema:
-#            type: integer
-#            example: 0
-#        - name: size
-#          required: false
-#          in: query
-#          description: The amount of elements in one page
-#          schema:
-#            type: integer
-#            example: 10
-#        - name: firstName
-#          in: query
-#          required: true
-#          schema:
-#            type: string
-#            example: 'Го'
-#        - name: lastName
-#          in: query
-#          required: true
-#          schema:
-#            type: string
-#            example: 'Фи'
-#        - name: patronymic
-#          in: query
-#          required: true
-#          schema:
-#            type: string
-#            example: 'Лав'
-#      responses:
-#        200:
-#          description: Successfully returned an array of authors by full name
-#          content:
-#            application/json:
-#              schema:
-#                type: array
-#                items:
-#                  $ref: '#/components/schemas/author'
   /authors/findByGenres:
     get:
       tags:
@@ -393,7 +346,7 @@ paths:
             type: array
             items:
               type: string
-              example: ['mystic', 'thriller']
+          example: ['Фантастика', 'Young adult']
       responses:
         200:
           description: Successfully returned an array of authors by genres
@@ -457,7 +410,7 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 1
       responses:
         200:
           description: Successfully returned Publisher
@@ -506,7 +459,7 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 11
       responses:
         200:
           description: Successfully deleted Publisher
@@ -539,7 +492,7 @@ paths:
           required: true
           schema:
             type: string
-            example: 'Azbuka'
+            example: 'Fanzon'
       responses:
         200:
           description: Successfully retrieved publishers from database by name
@@ -661,7 +614,7 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 3
       responses:
         200:
           description: Successfully deleted a genre
@@ -728,7 +681,7 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 1
       responses:
         200:
           description: Successfully retrieved user from the database
@@ -757,7 +710,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/user'
+              $ref: '#/components/schemas/updateUserByAdmin'
       responses:
         200:
           description: Successfully updated user
@@ -813,7 +766,7 @@ paths:
           required: true
           schema:
             type: string
-            example: 'John travolta'
+            example: 'John Travolta'
       responses:
         200:
           description: Successfully updated username
@@ -923,7 +876,7 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 1
       responses:
         200:
           description: Successfully retrieved order from the database
@@ -947,7 +900,7 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 1
       requestBody:
         content:
           application/json:
@@ -976,7 +929,7 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 1
       responses:
         200:
           description: Successfully deleted order
@@ -1028,13 +981,13 @@ paths:
           required: true
           schema:
             type: integer
-            example: 2
+            example: 1
         - name: newStatus
           in: query
           required: true
           schema:
             type: string
-            example: approved
+            example: 'approved'
       responses:
         200:
           description: Successfully changed status
@@ -1064,13 +1017,13 @@ components:
           type: array
           items:
             type: string
-            example: ['Fyodor Dostoevsky', 'Howard Lovecraft']
+          example: ['Фёдор Достоевский', 'Говард Лавкрафт']
         publisher:
           type: string
           example: 'Azbuka'
         title:
           type: string
-          example: 'Clean Code'
+          example: 'Чистый код'
         numberOfPages:
           type: integer
           example: 300
@@ -1081,7 +1034,7 @@ components:
           type: array
           items:
             type: string
-            example: ['fiction', 'children literature ']
+          example: ['Фантастика', 'Всемирная классика']
         bookQuantity:
           type: integer
           example: 10
@@ -1091,18 +1044,18 @@ components:
         price:
           type: number
           format: double
-          example: 4000.0
+          example: 2000.0
         authorList:
           type: array
           items:
             type: integer
-            example: [1, 2]
+          example: [1, 2]
         publisherId:
           type: integer
           example: 2
         title:
           type: string
-          example: 'Clean Code'
+          example: 'Золотой осел'
         numberOfPages:
           type: integer
           example: 300
@@ -1113,7 +1066,7 @@ components:
           type: array
           items:
             type: integer
-            example: [1, 7]
+          example: [1, 7]
         bookQuantity:
           type: integer
           example: 10
@@ -1125,13 +1078,13 @@ components:
           example: 1
         firstName:
           type: string
-          example: Leo
+          example: 'Лев'
         lastName:
           type: string
-          example: Tolstoy
+          example: 'Толстой'
         patronymic:
           type: string
-          example: Nikolayevich
+          example: 'Николаевич'
         birthday:
           type: string
           format: date
@@ -1144,19 +1097,19 @@ components:
           type: array
           items:
             type: string
-            example: ['novel', 'historical fiction']
+          example: ['Фантастика', 'Всемирная классика']
     saveAuthor:
       type: object
       properties:
         firstName:
           type: string
-          example: Leo
+          example: 'Лев'
         lastName:
           type: string
-          example: Tolstoy
+          example: 'Толстой'
         patronymic:
           type: string
-          example: Nikolayevich
+          example: 'Николаевич'
         birthday:
           type: string
           format: date
@@ -1169,7 +1122,7 @@ components:
           example: 1
         name:
           type: string
-          example: Azbuka
+          example: 'Азбука'
         publishedBooks:
           type: array
           items:
@@ -1179,7 +1132,7 @@ components:
       properties:
         name:
           type: string
-          example: Azbuka
+          example: 'Azbuka'
     genre:
       type: object
       properties:
@@ -1188,13 +1141,13 @@ components:
           example: 1
         genreName:
           type: string
-          example: Философия
+          example: 'Философия'
     saveGenre:
       type: object
       properties:
         genreName:
           type: string
-          example: Философия
+          example: 'Философия'
     order:
       type: object
       properties:
@@ -1222,7 +1175,7 @@ components:
           type: array
           items:
             type: integer
-            example: [1, 2]
+          example: [1, 2]
     saveOrder:
       type: object
       properties:
@@ -1230,12 +1183,12 @@ components:
           type: array
           items:
             type: integer
-            example: [1, 2]
+          example: [1, 2]
         bookAmount:
           type: array
           items:
             type: integer
-            example: [1, 2]
+          example: [1, 2]
     user:
       type: object
       properties:
@@ -1265,6 +1218,15 @@ components:
           type: string
           format: password
           example: 'qwerty'
+    updateUserByAdmin:
+      type: object
+      properties:
+        userRole:
+          type: string
+          example: 'Admin'
+        blockFlag:
+          type: boolean
+          example: false
     authenticationRequestDto:
       type: object
       properties:
